2014-10-30  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_cache_reset_to): Invalidate bidi_cache_last_idx by
	setting it to -1.
	(bidi_find_bracket_pairs): Pass to bidi_cache_reset_to a relative
	index, not an absolute one, as that's what the function expects.

2014-10-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* xfaces.c (Finternal_set_lisp_face_attribute): Don't try to realize
	font on an initial frame when running as a daemon (Bug#18869).

	* fontset.c (toplevel): Adjust comment to match 2014-06-19 change.

2014-10-30  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name): Use make_unibyte_string, not
	build_string, when importing a home directory.  (Bug#18873)

	* dispnew.c (buffer_posn_from_coords): Use
	WINDOW_WANTS_HEADER_LINE_P, not WINDOW_WANTS_MODELINE_P, to
	account for the header-line height.  (Bug#18839)

2014-10-28  Ulf Jasper  <ulf.jasper@web.de>

	* xml.c (parse_region): Do not forget the first document child.

2014-10-25  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m: pasteboard_changecount is new.
	(ns_store_pb_change_count, ns_get_pb_change_count)
	(ns_get_our_change_count_for): New functions.
	(ns_string_to_pasteboard_internal): Correct comment.
	type => gtype in eassert, Call ns_store_pb_change_count.
	(Fns_own_selection_internal): Remove data, use value (Bug#18799).
	(Fns_disown_selection_internal, Fns_selection_owner_p): Replace
	Vselection_alist check, with change count check.
	(Fns_get_selection): Initialize val to Qnil.  Only get local
	selection if change counts match (Bug#18799).
	(nxatoms_of_nsselect): Initialize pasteboard_changecount.

2014-10-25  Noam Postavsky  <npostavs@users.sourceforget.net>

	* src/w32proc.c (create_child): If calling a quoted batch file,
	pass NULL for exe.  (Bug#18745)

2014-10-24  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_resolve_explicit, bidi_find_bracket_pairs)
	(bidi_resolve_brackets): Use end of string position rather than ZV
	when iterating over a string.  (Bug#18815)
