@@ -1,3 +1,8 @@
+2014-10-31  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* font.c (copy_font_spec): Redesign to avoid Fcopy_alist
+	and unnecessary initialization.  Adjust comments.
+
 2014-10-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* bidi.c (bidi_cache_reset_to): Invalidate bidi_cache_last_idx by
